# homework-19

./: .env.sample  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_catalog.py
catalog/migrations/: 0001_initial.py  0002_alter_product_product_image.py  0003_alter_product_product_image.py  0003_product_manufactured_at.py  0004_version.py  0005_alter_version_product.py  0006_product_creator.py  0007_alter_product_product_image.py  0008_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_footer.html  inc_main_menu.html
catalog/templatetags/: image_output.py
config/: settings.py
fixtures/: blog_data1.json  catalog_data.json  catalog_data2.json  catalog_data3.json  groups_data1.json  users_data1.json
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_token.py  0004_alter_user_options.py
users/templates/users/: login.html  password_reset_email.html  register.html  user_form.html
